--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,7 @@
     - fixed bug with frames
     - speed up scripts
     - some code optimizations
-    - starting improving themes
+    - starting implementation themes
     - more any bugs fixed
 1.2 (2009-12-17)
     - same code optimizations
