--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,10 @@
+1.4.1 (2010-06-22)
+    - Added: White theme
+    - Fixed: positioning
 1.4 (2010-06-22)
     - Fixed: Stoped working (seems same updates on google translate)
     - Fixed: Google Reader positoning issue
     - From now don't remove selection from text
-    - New: Auto-detect user locale
 1.3 (2009-12-17)
     - added 'latest' language in options
     - fixed bug with frames
