--- a/README
+++ b/README
@@ -5,3 +5,5 @@ This repository containts following crhome extesions:
     - Url simplify
 
 Every extensions has own branch. So run 'git branch' to list the bracnhes and 'git checkout brancname' for get source-code for every extension
+
+All code under this repositury is licensed with GPLv3 license
