--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This repository containts following crhome extesions:
+This repository containts following chrome extesions:
 
     - Auto traslate
     - Auto-fill enhancer
